Program working directory is also now configurable via players.yml config file